--- a/text.css
+++ b/text.css
@@ -39,7 +39,7 @@ body {
     color: #23818a;
     font-size: 50px;
     position: fixed;
-    margin-left:1000px;
+    margin-left:70%;
     height:50%
   
 }
